Bug 374557 - plasma-nm v5.8.5 has problems with openvpn v2.4.0 ('tls-remote' option no longer valid)
Summary: plasma-nm v5.8.5 has problems with openvpn v2.4.0 ('tls-remote' option no lon...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR major
Target Milestone: 1.0
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-04 19:24 UTC by Paul Moore
Modified: 2024-12-23 18:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Moore 2017-01-04 19:24:37 UTC
See the associated Arch Linux bug at the link below:

* https://bugs.archlinux.org/task/52368

The root of the issue is the removal of the 'tls-remote' option in OpenVPN v2.4 and the continued use of this option in the plasma-nm (or whatever component is responsible) OpenVPN generated configurations.

More information in the following links:

* https://community.openvpn.net/openvpn/wiki/ChangesInOpenvpn24
* https://bugs.archlinux.org/task/52347
Comment 1 Jan Grulich 2017-01-10 11:02:37 UTC
Git commit f7db059a219b9dfe2069d3899b0fde8cfef50995 by Jan Grulich.
Committed on 10/01/2017 at 11:02.
Pushed by grulich into branch 'master'.

Do not pass and use "tls-remote" option with OpenVPN 2.4.0+

M  +2    -2    vpn/openvpn/openvpnadvanced.ui
M  +116  -27   vpn/openvpn/openvpnadvancedwidget.cpp
M  +8    -3    vpn/openvpn/openvpnadvancedwidget.h

https://commits.kde.org/plasma-nm/f7db059a219b9dfe2069d3899b0fde8cfef50995
Comment 2 Ben Cooksley 2024-12-23 18:23:34 UTC
Bulk transfer as requested in T17796