Do not pass and use "tls-remote" option with OpenVPN 2.4.0+

BUG:374557